# smartgameviewer

./: .devenv.flake.nix  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  devenv.nix
docs/: code-walkthrough.md  demo.md  manual-testing-verification.md  playlist-manual-testing.md  report-docs-updates-needed.md  report-test-coverage-gaps.md
docs/plans/: 2025-01-14-board-rotation.md  2025-10-12-sgf-viewer-initial.md
examples/: AlphaGo_LeeSedol_game4.sgf
images/: endgame.tape  midgame.tape  opening.tape
sgf/: AlphaGo_LeeSedol_game5.sgf
src/: board_view.rs  game.rs  lib.rs  main.rs  parser.rs  playlist.rs  ui.rs
test_sgf/: game20.sgf
tests/: board_view_tests.rs  game_tests.rs  integration_tests.rs  parser_tests.rs  playlist_integration_tests.rs  playlist_tests.rs  ui_tests.rs
